[gd_scene load_steps=9 format=3 uid="uid://b06i5e0qsmld8"]

[ext_resource type="Texture2D" uid="uid://cavlf2p64ow2x" path="res://Sprites/Enemies/Enemy2.png" id="1_d7a6w"]
[ext_resource type="Script" path="res://Scenes/enemies/enemy.gd" id="1_iora2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tj0so"]
size = Vector2(12.2837, 6.65421)

[sub_resource type="Animation" id="Animation_ih24a"]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_q347n"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.396971, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12.2837, 6.28563), Vector2(12.2837, 4.65421), Vector2(12.2837, 4.65421)]
}

[sub_resource type="Animation" id="Animation_5slnr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12.2837, 6.65421)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsftv"]
_data = {
"Dead": SubResource("Animation_ih24a"),
"Idle": SubResource("Animation_q347n"),
"RESET": SubResource("Animation_5slnr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uete6"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_iora2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 12.8572)
shape = SubResource("RectangleShape2D_tj0so")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d7a6w")
hframes = 7
vframes = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jsftv")
}

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2(7, 16)
target_position = Vector2(0, 17)

[node name="RayCastX" type="RayCast2D" parent="."]
position = Vector2(7, 13)
target_position = Vector2(10, 0)

[node name="hitbox" type="Area2D" parent="."]
light_mask = 32
visibility_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_uete6")
debug_color = Color(0.976471, 0.121569, 0.258824, 0.419608)

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
